[package]
authors = ["ustulation <ustulation@gmail.com>"]
description = "NAT Traversal for P2P communication"
documentation = "https://docs.rs/socket-collection/"
license = "MIT OR BSD-3-Clause"
name = "socket-collection"
readme = "README.md"
repository = "https://github.com/ustulation/socket-collection"
version = "0.2.0"

[dependencies]
byteorder = "~1.2.0"
#libudt4-sys = "~0.2.0"
libudt4-sys = { git = "https://github.com/ustulation/udt-rs.git", optional = true }
log = "~0.3.6"
maidsafe_utilities = "~0.17.0"
mio = "~0.6.9"
quick-error = "~1.2.2"
serde = "~1.0.25"
serde_derive = "~1.0.25"
#udt = "~0.2.0"
udt = { git = "https://github.com/ustulation/udt-rs.git", optional = true }
unwrap = "~1.2.0"

[features]
protocol-udt = ["udt", "libudt4-sys"]